Moved board initialization into initApp()

--- a/index.html
+++ b/index.html
@@ -50,94 +50,8 @@
             <h1 id="visited-colors"></h1>
         </span>
         <div id="content">
-            <canvas id="demo-canvas" width="1600" height="620"></canvas>
-            <div id="board">
-                <div id="row0">
-                    <div id="square0-0" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square0-1" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square0-2" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square0-3" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square0-4" onclick="changeColor(this)">
-
-                    </div>
-                </div>
-                <div id="row1">
-                    <div id="square1-0" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square1-1" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square1-2" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square1-3" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square1-4" onclick="changeColor(this)">
-
-                    </div>
-                </div>
-                <div id="row2">
-                    <div id="square2-0" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square2-1" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square2-2" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square2-3" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square2-4" onclick="changeColor(this)">
-
-                    </div>
-                </div>
-                <div id="row3">
-                    <div id="square3-0" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square3-1" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square3-2" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square3-3" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square3-4" onclick="changeColor(this)">
-
-                    </div>  
-                </div>
-                <div id="row4">
-                    <div id="square4-0" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square4-1" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square4-2" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square4-3" onclick="changeColor(this)">
-
-                    </div>
-                    <div id="square4-4" onclick="changeColor(this)">
-
-                    </div>
-                </div>
-            </div>
+            <canvas id="demo-canvas" width="1340" height="620"></canvas>
+            <div id="board"></div>
         </div>
     </div>
 
